--- a/src/app/pages/driver/driver-profile/driver-profile.page.scss
+++ b/src/app/pages/driver/driver-profile/driver-profile.page.scss
@@ -168,6 +168,13 @@
   color: #8a8a8a;
   margin-bottom: -4px;
 }
+label{
+    font-size: 14px;
+  font-family: "Space Grotesk", sans-serif;
+  font-weight: 400;
+  color: #8a8a8a;
+  margin-bottom: -4px;
+}
 ion-card {
   width: 880px;
   height: 841px;
@@ -270,14 +277,18 @@ ion-grid{
   color: #333;
   --placeholder-color: #aaa;
   cursor: pointer;
+  margin-left: 40px;
 
   ion-icon {
     font-size: 18px;
     color: #666;
     position: absolute;
-    right: 13%;
-    top: 40%;
+    right: 3%;
+    top: 41%;
   }
+}
+label{
+  margin-left: 40px;
 }
 .input {
   background: #f5f6f8;
@@ -1182,6 +1193,9 @@ ion-datetime::part(confirm-button) {
   .date-box {
     width: 91%;
   }
+  .date-box2 {
+    width: 91%;
+  }
   .driver-profile-container ion-input {
     width: 91%;
   }
@@ -1250,6 +1264,9 @@ ion-datetime::part(confirm-button) {
     width: 91%;
   }
   .date-box {
+    width: 91%;
+  }
+  .date-box2 {
     width: 91%;
   }
 
@@ -1328,6 +1345,9 @@ ion-datetime::part(confirm-button) {
     width: 96%;
   }
   .date-box {
+    width: 91%;
+  }
+  .date-box2 {
     width: 91%;
   }
   .align-row {
@@ -1415,6 +1435,9 @@ ion-datetime::part(confirm-button) {
   .date-box {
     width: 91%;
   }
+  .date-box2 {
+    width: 91%;
+  }
 
   .right-side {
     left: 30px;
@@ -1467,7 +1490,7 @@ ion-datetime::part(confirm-button) {
   .generate-btn,
   .paid-btn {
     width: 100%;
-    max-width: 400px; // max limit rakho
+    max-width: 500px; // max limit rakho
     min-width: unset; // remove fixed min width
     height: 48px;
     margin-top: 16px;
@@ -1523,7 +1546,7 @@ ion-datetime::part(confirm-button) {
     margin-left: 20px;
     ion-icon {
       top: 40%;
-      right: 9%;
+      right: 9.5%;
     }
   }
   .date-box2 {
@@ -1531,8 +1554,8 @@ ion-datetime::part(confirm-button) {
     margin-left: 20px;
     ion-icon {
       position: fixed;
-      top: 51%;
-      right: 13%;
+      top: 49%;
+      right: 15%;
     }
   }
   #Ad{
