--- a/src/app/pages/schools/add-new-schools/add-new-schools.page.scss
+++ b/src/app/pages/schools/add-new-schools/add-new-schools.page.scss
@@ -564,7 +564,7 @@ ion-icon {
     width: 100%;
     min-width: 200px;
     height: 48px;
-    margin-top: 40px;
+    margin-top: 20px;
     border-radius: 10px;
     font-size: 15px;
   }
