--- a/src/app/pages/schools/schools.page.scss
+++ b/src/app/pages/schools/schools.page.scss
@@ -451,7 +451,7 @@ ion-button {
   .table-container,
   .head-container,
   .table-card {
-    min-width: 600px;
+    min-width: 900px;
     /* jitne columns ho us hisaab se */
   }
 
